--- a/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/register.css
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/vatvostudio.vn/register.css
@@ -1,53 +1,84 @@
+.form-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(4, auto);
+  padding-top: 20px;
+  row-gap: 20px;
+  column-gap: 30px;
+}
 
-input {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-  }
 
-  input[type=radio] {
-    width: 20px;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
+.form-title {
+  font-size: 25px;
+  border-bottom: 1px solid gray;
+  padding-bottom: 10px;
+  font-weight: 700;
+}
+
+.form-item div:nth-child(1) {
+  margin-bottom: 7px;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+input, textarea, select, button {
+  font-family: "Montserrat-Regular";
+  font-size: 15px;
+  color: #666; 
+}
+
+.form-control {
+  height: 47px;
+  display: block;
+  border: 1px solid #e6e6e6;
+  background: none;
+  border-radius: 5px;
+  padding: 0 19px; 
+  width: 100%;
+} 
+  .form-control:focus {
+    border: 1px solid #f4d5cc;
   }
-  
-  input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
+  .form-control::-webkit-input-placeholder {
+    color: #999; }
+  .form-control::-moz-placeholder {
+    color: #999; }
+  .form-control:-ms-input-placeholder {
+    color: #999; }
+  .form-control:-moz-placeholder {
+    color: #999; }
+
+@media (max-width: 874px) {
+  .form-grid {
+    grid-template-columns: 1fr;
+    grid-template-columns: auto;
   }
-  
-  hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-  }
-  
-  .registerbtn {
-    background-color: rgb(94, 199, 199);
-    color: white;
-    padding: 16px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-  }
-  
-  .registerbtn:hover {
-    opacity: 1;
-  }
-  
-  a {
-    color: dodgerblue;
-  }
-  
-  /* Set a grey background color and center the text of the "sign in" section */
-  .signin {
-    background-color: #f1f1f1;
-    text-align: center;
-  }
+}
+
+.gender {
+  margin-top: 20px;
+}
+
+#female, #other{
+  margin-left: 50px;
+}
+
+button {
+  margin-top: 15px;
+  width: 20%;
+  height: 45px;
+  background-color: #4c9be5;
+  border: 2px solid #4c9be5;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: all 0.1s ease;
+}
+.error {
+  color: red;
+  font-style: italic;
+  font-size: 17px;
+  padding-top: 5px;
+}
