--- a/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/src/app/pages/welcome/welcome.component.html
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/src/app/pages/welcome/welcome.component.html
@@ -1,4 +1,8 @@
-<nz-table #basicTable [nzData]="listEmployee">
+<nz-card nzTitle="Danh sách nhân viên" [nzExtra]="buttonAdd">
+  <nz-table #employee [nzData]="listEmployee"
+        nzShowSizeChanger
+        [nzPageSize]="7" 
+        [nzPageIndex]="1">
   <thead>
     <tr>
       <th>Id</th>
@@ -11,17 +15,23 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let data of listEmployee">
+    <tr *ngFor="let data of employee.data">
       <td>{{ data.id }}</td>
       <td>{{ data.name }}</td>
-      <td>{{ data.email }}</td>
+      <td>{{ data.mail }}</td>
       <td>{{ data.address }}</td>
       <td>{{ data.phone }}</td>
-      <td>{{ data.gender }}</td>
+      <td>{{ data.gender == true ? "Nam" : "Nữ" }}</td>
       <td>
-        <a>Update</a>
+        <a style="margin-right: 20px;" [routerLink]="['ce-employee', data.id]">Update</a>
         <a>Delete</a>
       </td>
     </tr>
   </tbody>
 </nz-table>
+</nz-card>
+
+
+<ng-template #buttonAdd>
+  <button nz-button nzType="primary" [routerLink]="['ce-employee', 0]">Add User</button>
+</ng-template>
