--- a/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/src/app/app.component.html
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/src/app/app.component.html
@@ -12,10 +12,10 @@
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
+      <li nz-submenu nzOpen nzTitle="Manager" nzIcon="dashboard">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/welcome">Employee manager</a>
+            <a routerLink="/welcome">Employee</a>
           </li>
         </ul>
       </li>
