--- a/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/src/app/pages/welcome/welcome.component.html
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/src/app/pages/welcome/welcome.component.html
@@ -21,10 +21,10 @@
       <td>{{ data.mail }}</td>
       <td>{{ data.address }}</td>
       <td>{{ data.phone }}</td>
-      <td>{{ data.gender == true ? "Nam" : "Nữ" }}</td>
+      <td>{{ data.gender == true ? "Male" : "Female" }}</td>
       <td>
         <a style="margin-right: 20px;" [routerLink]="['ce-employee', data.id]">Update</a>
-        <a>Delete</a>
+        <a (click)="deleteEmployee(data.id)">Delete</a>
       </td>
     </tr>
   </tbody>
