--- a/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/src/app/app.component.html
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/src/app/app.component.html
@@ -17,6 +17,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/welcome">Employee</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/ag-grid">Ag-grid</a>
+          </li>
         </ul>
       </li>
     </ul>
